<resources>
    <string name="app_name">FoodRecipe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receipe">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="jokes">Jokes</string>
    <string name="no_internet_available">No Internet Available</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="title">Title</string>
    <string name="save_to_favorite">Save To Favorite</string>
    <string name="no_favorites_recipes">No Favorites Recipes</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="share">Share</string>
</resources>